syntax = "proto3";

package protos;

service Pregel {
  rpc StartJob (StartJobRequest) returns (StartJobReply) {}
  rpc GetJobStatus (GetJobStatusRequest) returns (GetJobStatusReply) {}
  rpc GetJobResult  (GetJobResultRequest) returns (GetJobResultReply) {}
}

message StartJobRequest {
    string label = 1;

    string store = 2;
    bytes storeParams = 3;

    string algorithm = 4;
    bytes algorithmParams = 5;

    int32 verticesPerTask = 6;
}

message StartJobReply {
    string jobId = 1;
}

message GetJobStatusRequest {
    string jobId = 1;
}

message GetJobStatusReply {
    // TODO
}

message GetJobResultRequest {
    string jobId = 1;
}

message GetJobResultReply {
    string jobId = 1;
    bytes result = 2;
}
